objects/ESC_Case_Form_Extension_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Required__c</fullName>
        <label>Action Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange Password</fullName>
                    <default>true</default>
                    <label>Exchange Password</label>
                </value>
                <value>
                    <fullName>Add Password</fullName>
                </value>
                <value>
                    <fullName>Delete Password</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_to_be_Taken__c</fullName>
        <label>Action to be Taken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_MYR_Procing_Effective__c</fullName>
        <label>Additional MYR Pricing Effective?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Multi_Year_Pricinig_in_Effect__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>MYR Begin</fullName>
                    <isActive>false</isActive>
                    <label>MYR Begin</label>
                </value>
                <value>
                    <fullName>MYR End</fullName>
                    <isActive>false</isActive>
                    <label>MYR End</label>
                </value>
                <value>
                    <fullName>MYR Pricing</fullName>
                    <isActive>false</isActive>
                    <label>MYR Pricing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_to_Pay__c</fullName>
        <label>Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Used in charge cancellation approval request</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attorney_Band__c</fullName>
        <label>Attorney Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banded</fullName>
                </value>
                <value>
                    <fullName>Per User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Amount__c</fullName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Group_ZB_Online__c</fullName>
        <label>Billing Group (ZB) - Online</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_Item_Number__c</fullName>
        <label>Billing Line Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Plan_Type__c</fullName>
        <label>Billing Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Shipping Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Disaster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Bottom_Line_Price__c</fullName>
        <label>Correct Bottom Line Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Correct_Product_Full_Service_Material__c</fullName>
        <label>Correct Product Full Service Material #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Product_Price__c</fullName>
        <label>Correct Product Price</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Product_Subscription_Material__c</fullName>
        <label>Correct Product Subscription Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account__c</fullName>
        <label>Current Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contact_Number__c</fullName>
        <label>Current Contact Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Partner_Function__c</fullName>
        <label>Current Partner Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold to Party</fullName>
                </value>
                <value>
                    <fullName>Bill to Party</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Ship to Party</fullName>
                </value>
                <value>
                    <fullName>Subscription Location</fullName>
                </value>
                <value>
                    <fullName>Customer Org</fullName>
                </value>
                <value>
                    <fullName>Westlaw Payment Group</fullName>
                </value>
                <value>
                    <fullName>Westlaw Usage Group</fullName>
                </value>
                <value>
                    <fullName>Westlaw Reporting</fullName>
                </value>
                <value>
                    <fullName>Westlaw Bill To</fullName>
                </value>
                <value>
                    <fullName>State List Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_User_Name__c</fullName>
        <label>Current User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_to_Modify__c</fullName>
        <label>Documents to Modify</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Only</fullName>
                </value>
                <value>
                    <fullName>Complete Packet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Application_Instructions__c</fullName>
        <label>Application Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Billing_Doc__c</fullName>
        <label>Billing Doc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Form_Extension__c</fullName>
        <label>Case Form Extension</label>
        <referenceTo>ESC_Case_Form_Extension__c</referenceTo>
        <relationshipLabel>Case Form Extension Line Items</relationshipLabel>
        <relationshipName>Case_Form_Extension_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ESC_Certificate_Imaged__c</fullName>
        <label>Certificate Imaged?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Charge_without_tax__c</fullName>
        <description>Used in Reshipment Request Form</description>
        <label>Charge (without tax &amp; trans. Charge)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESC_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Correct_Price__c</fullName>
        <label>Correct Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Current_Full_Service_Number__c</fullName>
        <label>Current Full Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Current_Name__c</fullName>
        <label>Current Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Current_Pricing__c</fullName>
        <label>Current Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESC_Designation__c</fullName>
        <description>WPk Deal Creation</description>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Effective_Date__c</fullName>
        <description>WPk Deal Creation</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESC_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ESC_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ESC_End_Date__c</fullName>
        <description>WPk Deal Creation</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESC_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Item_Amount__c</fullName>
        <label>Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Line__c</fullName>
        <label>Line #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Location_Code__c</fullName>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Material_Description__c</fullName>
        <description>WPk Deal Creation</description>
        <label>Material Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Material_Number__c</fullName>
        <description>Used in Reshipment Request Form</description>
        <label>Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Media__c</fullName>
        <label>Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CD-ROM</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_New_First_Name__c</fullName>
        <label>New First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_New_Full_Service_Number__c</fullName>
        <label>New Full Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_New_Last_Name__c</fullName>
        <label>New Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_New_Location_Code__c</fullName>
        <label>New Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_New_Practice_Code__c</fullName>
        <label>New Practice Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Percent_of_Discount__c</fullName>
        <description>WPk Deal Creation</description>
        <label>% of Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESC_Practice_Code__c</fullName>
        <label>Practice Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Product_Title__c</fullName>
        <label>Product Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Root_Cause__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>47-Tax Exempt</fullName>
                    <label>Tax Exempt</label>
                </value>
                <value>
                    <fullName>62-Misunderstanding Terms of Agreement</fullName>
                    <label>Misunderstanding Terms of Agreement</label>
                </value>
                <value>
                    <fullName>83-EE:Executive Escalation</fullName>
                    <label>EE:Executive Escalation</label>
                </value>
                <value>
                    <fullName>104-Sub/Pswd Lapse Received/Not Processed</fullName>
                    <label>Sub/Pswd Lapse Received/Not Processed</label>
                </value>
                <value>
                    <fullName>163-Westpack Discount Missed-CS</fullName>
                    <label>Westpack Discount Missed-CS</label>
                </value>
                <value>
                    <fullName>70-Lapse missed by processor (LAMP)</fullName>
                    <label>Lapse missed by processor (LAMP)</label>
                </value>
                <value>
                    <fullName>162-Westpack Discount Missed - OP</fullName>
                    <label>Westpack Discount Missed - OP</label>
                </value>
                <value>
                    <fullName>179-Order Processing error</fullName>
                    <label>Order Processing error</label>
                </value>
                <value>
                    <fullName>39-Field approves return under contract</fullName>
                    <label>Field approves return under contract</label>
                </value>
                <value>
                    <fullName>44-Customer/sale rep used wrong password</fullName>
                    <label>Customer/sale rep used wrong password</label>
                </value>
                <value>
                    <fullName>51-Renewal not received/processed</fullName>
                    <label>Renewal not received/processed</label>
                </value>
                <value>
                    <fullName>152-Wrong Acct # /Partner Functions (Compliance)</fullName>
                    <label>Wrong Acct # /Partner Functions (Compliance)</label>
                </value>
                <value>
                    <fullName>178-Sam Rep order written incorrectly</fullName>
                    <label>Sam Rep order written incorrectly</label>
                </value>
                <value>
                    <fullName>191-Deal Timing exception</fullName>
                    <label>Deal Timing exception</label>
                </value>
                <value>
                    <fullName>10-Seminar No Show</fullName>
                    <label>Seminar No Show</label>
                </value>
                <value>
                    <fullName>52-Sub/Plan Stopped Annual Monthly Chg Adj</fullName>
                    <label>Sub/Plan Stopped Annual Monthly Chg Adj</label>
                </value>
                <value>
                    <fullName>55-Claims never ordered</fullName>
                    <label>Claims never ordered</label>
                </value>
                <value>
                    <fullName>73-Cust Did Not Understand Warning Screen/Plan</fullName>
                    <label>Cust Did Not Understand Warning Screen/Plan</label>
                </value>
                <value>
                    <fullName>75-Hourly vs Trans/Lines vs Doc</fullName>
                    <label>Hourly vs Trans/Lines vs Doc</label>
                </value>
                <value>
                    <fullName>103-Claims Notified Us To Lapse Sub/Pswd</fullName>
                    <label>Claims Notified Us To Lapse Sub/Pswd</label>
                </value>
                <value>
                    <fullName>181-Customer used incorrect password</fullName>
                    <label>Customer used incorrect password</label>
                </value>
                <value>
                    <fullName>69-Customer Exp Gen Equip Difficulties</fullName>
                    <label>Customer Exp Gen Equip Difficulties</label>
                </value>
                <value>
                    <fullName>48-Transportation and Handling</fullName>
                    <label>Transportation and Handling</label>
                </value>
                <value>
                    <fullName>54-Wrong Product Sent</fullName>
                    <label>Wrong Product Sent</label>
                </value>
                <value>
                    <fullName>56-Claims never received</fullName>
                    <label>Claims never received</label>
                </value>
                <value>
                    <fullName>145-Quantity</fullName>
                    <label>Quantity</label>
                </value>
                <value>
                    <fullName>183-Claims returned</fullName>
                    <label>Claims returned</label>
                </value>
                <value>
                    <fullName>40-Special Offer Subscription Content/Pricing Issue</fullName>
                    <label>Special Offer Subscription Content/Pricing Issue</label>
                </value>
                <value>
                    <fullName>43-Charged For Database W/In Plan</fullName>
                    <label>Charged For Database W/In Plan</label>
                </value>
                <value>
                    <fullName>180-Priced Wrong in System</fullName>
                    <label>Priced Wrong in System</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Request_Description__c</fullName>
        <label>Request Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Reshipment_Request_Form__c</fullName>
        <description>Used Reshipment Request Form</description>
        <label>Enter Sub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Order Processing</fullName>
                </value>
                <value>
                    <fullName>Sales/Acct Management</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Technical/System</fullName>
                </value>
                <value>
                    <fullName>Shipping/Returns</fullName>
                </value>
                <value>
                    <fullName>Data Setup</fullName>
                </value>
                <value>
                    <fullName>Print/CD Sub Recovery</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Findlaw</fullName>
                </value>
                <value>
                    <fullName>Correct Pricing Discounts</fullName>
                </value>
                <value>
                    <fullName>Financial Findlaw</fullName>
                </value>
                <value>
                    <fullName>Product Performance-Findlaw</fullName>
                </value>
                <value>
                    <fullName>Product Quality-Findlaw</fullName>
                </value>
                <value>
                    <fullName>Services-Findlaw</fullName>
                </value>
                <value>
                    <fullName>Training/Implementation</fullName>
                </value>
                <value>
                    <fullName>TRTA Corporates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_SAP_Contact_ID__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Sold_To_Region__c</fullName>
        <label>Sold To Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Type_of_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type of charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_summary_of_Request__c</fullName>
        <label>summary of Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Service_Material_Number__c</fullName>
        <label>Full Service Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Service_Material_Product_to_Add__c</fullName>
        <label>Full Service Material #(Product to Add)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Service__c</fullName>
        <label>Full Service Material #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Pro_Rated_Amount__c</fullName>
        <label>Include Pro-Rated Amount?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incorrect_Price__c</fullName>
        <label>Incorrect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Modify Invoice Form</description>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <description>Modify Invoice Form</description>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Non-Online</fullName>
                </value>
                <value>
                    <fullName>Pro-Forma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Contract_Copies__c</fullName>
        <label>Line/Contract/Copies</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Designation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName># of Copies</fullName>
                </value>
                <value>
                    <fullName>Line/Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYR_Begin_mm_dd_yyyy__c</fullName>
        <label>MYR Begin (mm/dd/yyyy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYR_End_mm_dd_yyyy__c</fullName>
        <label>MYR End (mm/dd/yyyy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MYR_Pricing__c</fullName>
        <label>MYR Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Pricinig_in_Effect__c</fullName>
        <label>Multi-Year Pricinig in Effect?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account_Number__c</fullName>
        <label>New Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Number__c</fullName>
        <label>New Contact Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Partner_Function__c</fullName>
        <label>New Partner Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold to Party</fullName>
                </value>
                <value>
                    <fullName>Bill to Party</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Ship to Party</fullName>
                </value>
                <value>
                    <fullName>Subscription Location</fullName>
                </value>
                <value>
                    <fullName>Customer Org</fullName>
                </value>
                <value>
                    <fullName>Westlaw Payment Group</fullName>
                </value>
                <value>
                    <fullName>Westlaw Usage Group</fullName>
                </value>
                <value>
                    <fullName>Westlaw Reporting</fullName>
                </value>
                <value>
                    <fullName>Westlaw Bill To</fullName>
                </value>
                <value>
                    <fullName>State List Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_User_Name__c</fullName>
        <label>New User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Concurrent_Users__c</fullName>
        <label>Number of Concurrent Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Modify Invoice Form</description>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_ABC_Code__c</fullName>
        <label>Payer ABC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Acct_Number__c</fullName>
        <label>Payer Acct Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>